Quota: Revert "should/must remain available" changes on low-end devices

Chrome has a "should remain available" disk space threshold; when less
than this amount is free, the effective quota for each origin drops to
0 so new writes will fail. This is present to avoid Chrome being
responsible for filling the disk which generally makes devices
unhappy. Similarly, Chrome has a "must remain available" threshold at
which point data starts being evicted - keeping the device functional,
but potentially losing user data.

In r538818 and r539735 in M66 the thresholds were changed from 10% and
1% to a fixed 2GB and 1GB respectively, to reduce the amount reserved
on high-end devices - 10% of a 1TB machine is a lot! But this did not
account for the impact on low end devices, e.g. 16GB or even 8GB,
where the reserve substantially increased, reducing the usability of
Chrome.

Change the algorithm to use min(fixed, ratio) where fixed values
remain 2GB/1GB and the ratios revert back to 10%/1%, restoring the
previous availability on storage on low end devices.

Bug: 838816
Change-Id: I7d60ae614d6be7a99cfaaa29f2aac9ce25ce861e
Reviewed-on: https://chromium-review.googlesource.com/1039879
Commit-Queue: Daniel Murphy <dmurph@chromium.org>
Reviewed-by: Daniel Murphy <dmurph@chromium.org>
Reviewed-by: Victor Costan <pwnall@chromium.org>
Cr-Commit-Position: refs/heads/master@{#555600}
Former-commit-id: 73b18e372a83137f1198a350973225c4c145ceb6